--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,18 @@
 .list-group-item > span.pull-right{
   word-wrap: break-word;
 }
+
+.info-box .btn-group{
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 15px;
+}
+
+.info-box:hover .btn-group{
+  display: block;
+}
+
+.dropdown-menu > li > a[type='button']:hover{
+  cursor: pointer;
+}
