Agregado Calendario de Jornadas + Eventos

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,11 +16,13 @@
   top: 0;
   right: 15px;
 }
-
 .info-box:hover .btn-group{
   display: block;
 }
-
 .dropdown-menu > li > a[type='button']:hover{
+  cursor: pointer;
+}
+
+.clickableEvent:hover{
   cursor: pointer;
 }
